Media Controls: only eat keyboard inputs on popups when using them.

This allows shortcuts such as going to the dev tools to work while the
popup menus are visible.

Bug: 835615
Change-Id: Ie09bbe679c1356249138cf45c1b24977f7895158
Reviewed-on: https://chromium-review.googlesource.com/1023596
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552719}
Former-commit-id: 682a3df7a2c8046066f265956b9adcd900e9bbfe